--- a/index.html
+++ b/index.html
@@ -1,135 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sabores da Terra e Conexões Urbanas</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sabores da Terra & Conexões Urbanas</title>
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body, html {
-      height: 100%;
-      font-family: 'Montserrat', sans-serif;
-      overflow: hidden;
-    }
-
-    canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 0;
-    }
-
-    .overlay {
-      position: relative;
-      z-index: 1;
-      padding: 5vh 10vw;
-      color: white;
-      background: rgba(0, 0, 0, 0.4);
-      backdrop-filter: blur(8px);
-    }
-
-    .title {
-      font-size: 3rem;
-      font-weight: 700;
-      text-shadow: 2px 2px 4px #000;
-    }
-
-    .subtitle {
-      font-size: 1.2rem;
-      margin-top: 1rem;
-      max-width: 600px;
-    }
-
-    .cta-button {
-      margin-top: 2rem;
-      padding: 1rem 2rem;
-      background: #ffb347;
-      border: none;
-      color: #333;
-      font-weight: bold;
-      font-size: 1rem;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .cta-button:hover {
-      background: #ffa500;
-    }
-
-    @media (max-width: 768px) {
-      .title {
-        font-size: 2rem;
-      }
-      .subtitle {
-        font-size: 1rem;
-      }
-    }
-  </style>
 </head>
 <body>
-  <canvas id="bg"></canvas>
-
   <div class="overlay">
     <h1 class="title">Sabores da Terra & Conexões Urbanas</h1>
     <p class="subtitle">
-      Uma experiência que une o campo e a cidade através da culinária, cultura e sustentabilidade. Descubra as histórias por trás dos ingredientes, dos produtores e da gastronomia que transforma.
+      Uma plataforma que celebra a riqueza do campo e a criatividade da cidade através da gastronomia, cultura e sustentabilidade. Descubra os sabores que unem tradição e inovação.
     </p>
-    <button class="cta-button">Explorar</button>
+    <button class="cta-button">Explorar Histórias</button>
   </div>
-
-  <!-- Three.js CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
-
-  <!-- Simple 3D scene -->
-  <script>
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(
-      75,
-      window.innerWidth / window.innerHeight,
-      0.1,
-      1000
-    );
-
-    const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById("bg"), alpha: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    camera.position.z = 5;
-
-    // Create 3D rotating fruits
-    const textureLoader = new THREE.TextureLoader();
-    const geometry = new THREE.SphereGeometry(1, 32, 32);
-    const material = new THREE.MeshStandardMaterial({
-      map: textureLoader.load('https://i.imgur.com/wYSU4Tu.jpg'), // textura de maçã ou outro alimento
-    });
-    const sphere = new THREE.Mesh(geometry, material);
-    scene.add(sphere);
-
-    const light = new THREE.PointLight(0xffffff, 1);
-    light.position.set(5, 5, 5);
-    scene.add(light);
-
-    const ambientLight = new THREE.AmbientLight(0xffffff, 0.4);
-    scene.add(ambientLight);
-
-    function animate() {
-      requestAnimationFrame(animate);
-      sphere.rotation.y += 0.005;
-      renderer.render(scene, camera);
-    }
-
-    animate();
-
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    });
-  </script>
 </body>
 </html>
