--- a/index.html
+++ b/index.html
@@ -133,3 +133,32 @@
   </script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sabores da Terra & Conexões Urbanas</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>Sabores da Terra & Conexões Urbanas</h1>
+  </header>
+
+  <main>
+    <section id="modelo-3d">
+      <canvas id="canvas3d"></canvas>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Sabores da Terra & Conexões Urbanas</p>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/examples/js/loaders/GLTFLoader.js"></script>
+  <script src="js/script.js"></script>
+</body>
+</html>
