--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
       transition: transform 0.08s ease-out;
       z-index: 9999;
     }
+    .text-3d {
+      text-shadow: 1px 1px 0 #654321,
+                   2px 2px 0 #3e3e3e,
+                   3px 3px 0 #1a1a1a;
+      font-size: 3rem;
+      color: #a8d5ba;
+      font-weight: 700;
+    }
+    .text-3d-small {
+      text-shadow: 1px 1px 0 #3b3b3b;
+      font-size: 1.5rem;
+      color: #c3c3c3;
+    }
   </style>
 </head>
 <body>
@@ -28,7 +41,7 @@
 
   <header class="main-header">
     <div class="container">
-      <h1 class="logo">Sabores da Terra</h1>
+      <h1 class="logo text-3d">Sabores da Terra</h1>
       <nav class="main-nav">
         <ul>
           <li><a href="#sobre">Sobre</a></li>
@@ -42,22 +55,22 @@
 
   <section class="hero">
     <div class="overlay">
-      <h2>Conectando o campo à cidade através da culinária e cultura</h2>
-      <p>Uma jornada pelos sabores autênticos da terra que chegam à mesa urbana.</p>
+      <h2 class="text-3d">Conectando o campo à cidade</h2>
+      <p class="text-3d-small">Uma jornada pelos sabores autênticos da terra que chegam à mesa urbana.</p>
       <button class="cta-button">Explorar Histórias</button>
     </div>
   </section>
 
   <section id="sobre" class="section">
     <div class="container">
-      <h2>Sobre o Projeto</h2>
+      <h2 class="text-3d">Sobre o Projeto</h2>
       <p>“Sabores da Terra & Conexões Urbanas” valoriza a origem dos alimentos, conectando produtores rurais e consumidores urbanos através da gastronomia, cultura e sustentabilidade.</p>
     </div>
   </section>
 
   <section id="produtores" class="section">
     <div class="container">
-      <h2>Conheça os Produtores</h2>
+      <h2 class="text-3d">Conheça os Produtores</h2>
       <div class="cards">
         <div class="card">
           <h3>Joana - Orgânicos do Vale</h3>
@@ -77,7 +90,7 @@
 
   <section id="receitas" class="section">
     <div class="container">
-      <h2>Receitas com História</h2>
+      <h2 class="text-3d">Receitas com História</h2>
       <ul class="recipe-list">
         <li>
           <h4>Pão de fermentação natural da fazenda</h4>
@@ -97,7 +110,7 @@
 
   <section id="contato" class="section">
     <div class="container">
-      <h2>Entre em Contato</h2>
+      <h2 class="text-3d">Entre em Contato</h2>
       <form class="contact-form">
         <input type="text" placeholder="Nome" required />
         <input type="email" placeholder="Email" required />
@@ -113,7 +126,6 @@
     </div>
   </footer>
 
-  <!-- Elemento decorativo 3D com interação -->
   <div class="animated-3d"></div>
 
   <script>
@@ -123,7 +135,6 @@
       cursor.style.top = `${e.clientY}px`;
     });
 
-    // Rotação 3D simulada com movimento do mouse
     const cube = document.querySelector('.animated-3d');
     document.addEventListener('mousemove', (e) => {
       const xAxis = (window.innerWidth / 2 - e.pageX) / 25;
@@ -131,34 +142,5 @@
       cube.style.transform = `rotateY(${xAxis}deg) rotateX(${yAxis}deg)`;
     });
   </script>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sabores da Terra & Conexões Urbanas</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <h1>Sabores da Terra & Conexões Urbanas</h1>
-  </header>
-
-  <main>
-    <section id="modelo-3d">
-      <canvas id="canvas3d"></canvas>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Sabores da Terra & Conexões Urbanas</p>
-  </footer>
-
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/examples/js/loaders/GLTFLoader.js"></script>
-  <script src="js/script.js"></script>
 </body>
 </html>
