--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                    2px 2px 0 #3e3e3e,
                    3px 3px 0 #1a1a1a;
       font-size: 3rem;
-      color: #a8d5ba;
+      color: #0bda5e;
       font-weight: 700;
     }
     .text-3d-small {
