correção de textos

--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
 
   <section id="sobre" class="section">
     <div class="container">
-      <h2 class="text-3d">Sobre o Projeto</h2>
-      <p>“Sabores da Terra & Conexões Urbanas” valoriza a origem dos alimentos, conectando produtores rurais e consumidores urbanos através da gastronomia, cultura e sustentabilidade.</p>
+    <h2 class="text-3d">O projeto Sabores da Terra & Conexões Urbanas nasce da necessidade de aproximar o campo e a cidade, valorizando a cultura alimentar local, os saberes tradicionais e os pequenos produtores rurais. A iniciativa busca criar pontes entre os sabores autênticos do interior e o cotidiano urbano, promovendo experiências gastronômicas, educativas e culturais.</p>
     </div>
   </section>
 
