--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <section id="sobre" class="section">
     <div class="container">
-    <h2 class="text-3d-small">O projeto Sabores da Terra & Conexões Urbanas nasce da necessidade de aproximar o campo e a cidade, valorizando a cultura alimentar local, os saberes tradicionais e os pequenos produtores rurais. A iniciativa busca criar pontes entre os sabores autênticos do interior e o cotidiano urbano, promovendo experiências gastronômicas, educativas e culturais.</p>
+    <p class="text-3d-small">O projeto Sabores da Terra & Conexões Urbanas nasce da necessidade de aproximar o campo e a cidade, valorizando a cultura alimentar local, os saberes tradicionais e os pequenos produtores rurais. A iniciativa busca criar pontes entre os sabores autênticos do interior e o cotidiano urbano, promovendo experiências gastronômicas, educativas e culturais.</p>
     </div>
   </section>
 
