botão que leva pra outro site

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="overlay">
       <h2 class="text-3d">Conectando o campo à cidade</h2>
       <p class="text-3d-small">Uma jornada pelos sabores autênticos da terra que chegam à mesa urbana.</p>
-      <button class="cta-button">Explorar Histórias</button>
+      <a href="https://site-2-agrinho-25.vercel.app/" class="cta-button" target="_blank" rel="noopener noreferrer">Explorar Histórias</a>
     </div>
   </section>
 
