--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
           <p>Produtora de hortaliças orgânicas no interior de MG.</p>
         </div>
         <div class="card">
-          <h3>Seu Carlos - Mel Puro</h3>
-          <p>Apicultor que leva sabor e cura da terra para a cidade.</p>
-        </div>
+  <h3>Solange - Orgânicos do Vale</h3>
+  <p>Produtora de hortaliças orgânicas no interior de MG.</p>
+  <a href="https://site-3-produtores.vercel.app/" target="_blank" style="display:inline-block; margin-top:10px; padding:10px 16px; background-color:#0bda5e; color:#000; border-radius:6px; text-decoration:none; font-weight:bold;">Visite o site da Joana</a>
+</div>
+
         <div class="card">
           <h3>Maria - Queijos Artesanais</h3>
           <p>Queijeira premiada que mistura tradição e inovação.</p>
