--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <h2 class="text-3d">Conheça os Produtores</h2>
       <div class="cards">
         <div class="card">
-          <h3>Joana - Orgânicos do Vale</h3>
+          <h3>Solange - Orgânicos do Vale</h3>
           <p>Produtora de hortaliças orgânicas no interior de MG.</p>
         </div>
         <div class="card">
