--- a/index.html
+++ b/index.html
@@ -74,13 +74,14 @@
         <div class="card">
   <h3>Solange - Orgânicos do Vale</h3>
   <p>Produtora de hortaliças orgânicas no interior de MG.</p>
-  <a href="https://site-3-produtores.vercel.app/" target="_blank" style="display:inline-block; margin-top:10px; padding:10px 16px; background-color:#0bda5e; color:#000; border-radius:6px; text-decoration:none; font-weight:bold;">Visite o site de Solange</a>
+  <a href="https://site-3-produtores.vercel.app/" target="_blank" style="display:inline-block; margin-top:10px; padding:10px 16px; background-color:#0bda5e; color:#000; border-radius:6px; text-decoration:none; font-weight:bold;">Visite a historia de Solange</a>
 </div>
 
         <div class="card">
-          <h3>Maria - Queijos Artesanais</h3>
-          <p>Queijeira premiada que mistura tradição e inovação.</p>
-        </div>
+          <h3>Ariana - Queijos Artesanais</h3>
+  <p>Queijeira premiada que mistura tradição e inovação.</p>
+  <a href="https://site-3-produtores-6c7m.vercel.app/" target="_blank" style="display:inline-block; margin-top:10px; padding:10px 16px; background-color:#0bda5e; color:#000; border-radius:6px; text-decoration:none; font-weight:bold;">Visite a historia de Ariana</a>
+</div>
       </div>
     </div>
   </section>
