adição da receita pão caseiro

--- a/index.html
+++ b/index.html
@@ -92,7 +92,20 @@
       <ul class="recipe-list">
         <li>
           <h4>Pão de fermentação natural da fazenda</h4>
-          <p>Feito com farinha de trigo integral cultivado na região serrana.</p>
+          <p>Esse pão tem origem nas fazendas da região serrana, onde o cultivo de trigo integral é tradicional e feito de forma sustentável. Com grãos colhidos localmente, a receita valoriza práticas artesanais passadas de geração em geração, resgatando o sabor rústico e saudável do campo. O uso do fermento natural (levain) garante um pão mais nutritivo, leve e com casca crocante, refletindo a conexão entre o produtor e a terra.</p>
+          <h4>receita</h4>
+          <p>ingredientes</p>
+        <p>500g de farinha de trigo integral da região</p>
+        <p>350ml de água</p>
+        <p>100g de fermento natural ativo</p>
+      <p>10g de sal</p>
+     <p>Modo de preparo</p>
+    <p>Misture a farinha e a água. Deixe descansar 1h (autólise).</p>
+   <p>Adicione o fermento e depois o sal.</p>
+   <p>Sove levemente e faça dobras a cada 30 minutos (3x).</p>
+   <p>Deixe fermentar por 4 a 6 horas em temperatura ambiente.</p>
+   <p>Modele, leve à geladeira por 8 a 12 horas (fermentação lenta).</p>
+   <p>Asse em forno pré-aquecido a 230 °C por cerca de 40 minutos.</p>
         </li>
         <li>
           <h4>Salada de flores e mel de abelha nativa</h4>
