--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <p>350ml de água</p>
         <p>100g de fermento natural ativo</p>
       <p>10g de sal</p>
-     <p>Modo de preparo</p>
+     <h4>Modo de preparo</h4>
     <p>Misture a farinha e a água. Deixe descansar 1h (autólise).</p>
    <p>Adicione o fermento e depois o sal.</p>
    <p>Sove levemente e faça dobras a cada 30 minutos (3x).</p>
