arrumando os ultimos detalhes

--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
 
   <footer class="footer">
     <div class="container">
-      <p>&copy; 2025 Sabores da Terra & Conexões Urbanas. Todos os direitos reservados.</p>
+      <p>&copy; 2025 Sabores da Terra & Conexões Urbanas. Feito por Marcos Vinicius.</p>
+      <p>Colegio professor reni Correia Gamper</p>
     </div>
   </footer>
 
