arrumando os detalhes da descrição fimnal

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <footer class="footer">
     <div class="container">
       <p>&copy; 2025 Sabores da Terra & Conexões Urbanas. Feito por Marcos Vinicius.</p>
-      <p>Colegio professor reni Correia Gamper</p>
+      <p>Colegio professor Reni Correia Gamper</p>
     </div>
   </footer>
 
