removção do blank

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="overlay">
       <h2 class="text-3d">Conectando o campo à cidade</h2>
       <p class="text-3d-small">Uma jornada pelos sabores autênticos da terra que chegam à mesa urbana.</p>
-      <a href="https://site-2-agrinho-25.vercel.app/" class="cta-button" target="_blank" rel="noopener noreferrer">Explorar Histórias</a>
+      <a href="https://site-2-agrinho-25.vercel.app/" class="cta-button" rel="noopener noreferrer">Explorar Histórias</a>
     </div>
   </section>
 
@@ -74,13 +74,13 @@
         <div class="card">
   <h3>Solange - Orgânicos do Vale</h3>
   <p>Produtora de hortaliças orgânicas no interior de MG.</p>
-  <a href="https://site-3-produtores.vercel.app/" target="_blank" style="display:inline-block; margin-top:10px; padding:10px 16px; background-color:#0bda5e; color:#000; border-radius:6px; text-decoration:none; font-weight:bold;">Visite a historia de Solange</a>
+  <a href="https://site-3-produtores.vercel.app/" style="display:inline-block; margin-top:10px; padding:10px 16px; background-color:#0bda5e; color:#000; border-radius:6px; text-decoration:none; font-weight:bold;">Visite a historia de Solange</a>
 </div>
 
         <div class="card">
           <h3>Ariana - Queijos Artesanais</h3>
   <p>Queijeira premiada que mistura tradição e inovação.</p>
-  <a href="https://site-3-produtores-6c7m.vercel.app/" target="_blank" style="display:inline-block; margin-top:10px; padding:10px 16px; background-color:#0bda5e; color:#000; border-radius:6px; text-decoration:none; font-weight:bold;">Visite a historia de Ariana</a>
+  <a href="https://site-3-produtores-6c7m.vercel.app/" style="display:inline-block; margin-top:10px; padding:10px 16px; background-color:#0bda5e; color:#000; border-radius:6px; text-decoration:none; font-weight:bold;">Visite a historia de Ariana</a>
 </div>
       </div>
     </div>
