trocando o cubo verde por logo da reni correi gamper

--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
     </div>
   </footer>
 
-  <div class="animated-3d"></div>
+  <div class="animated-3d">
+    <img src="img/reni-removebg-preview.png" alt="Imagem 3D" />
+  </div>
 
   <script>
     const cursor = document.getElementById('custom-cursor');
