--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
           <p>Adicione o fermento e depois o sal.</p>
           <p>Sove levemente e faça dobras a cada 30 minutos (3x).</p>
           <p>Deixe fermentar por 4 a 6 horas em temperatura ambiente.</p>
-          <h4>Segue tutorial passo a passo</h4> <p>https://youtu.be/UBubg10yThs?si=gtjQHReKGyP5ZQRQ</p>
+          <h4>Segue tutorial passo a passo</h4> 
+          <a href="https://youtu.be/UBubg10yThs?si=gtjQHReKGyP5ZQRQ" class="lista-receitas">clique aqui</a>
         </li>
         <li>
           <h4>Pão Caseiro de Milho</h4>
