arrumando link 2 receita

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
           <p>Modele os pães, coloque em forma untada.</p>
           <p>Deixe crescer mais 30 minutos.</p>
           <p>Asse em forno pré-aquecido a 180 °C por cerca de 35 minutos.</p>
+          <a href="https://youtu.be/KN9sg_3ZfWw?si=UBQH-b0H-8hI5jHP" class="lista-receitas">clique aqui</a>
         </li>  
       </ul>
     </div>
