arrumando acesso ao passo a passo

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <p>Sove levemente e faça dobras a cada 30 minutos (3x).</p>
           <p>Deixe fermentar por 4 a 6 horas em temperatura ambiente.</p>
           <h4>Segue tutorial passo a passo</h4> 
-          <a href="https://youtu.be/UBubg10yThs?si=gtjQHReKGyP5ZQRQ" class="lista-receitas">clique aqui</a>
+          <a href="https://youtu.be/UBubg10yThs?si=gtjQHReKGyP5ZQRQ" class="lista-receitas"><img src="img/yt.png" alt="logo youtube" width="50" height="50"></a>
         </li>
         <li>
           <h4>Pão Caseiro de Milho</h4>
@@ -97,7 +97,7 @@
           <p>Asse em forno pré-aquecido a 180 °C por cerca de 35 minutos.</p>
           <p> </p>
           <h4>Segue tutorial passo a passo</h4>
-          <a href="https://youtu.be/KN9sg_3ZfWw?si=UBQH-b0H-8hI5jHP" class="lista-receitas">clique aqui</a>
+          <a href="https://youtu.be/KN9sg_3ZfWw?si=UBQH-b0H-8hI5jHP" class="lista-receitas"><img src="img/yt.png" alt="logo youtube" width="50" height="50"></a>
         </li>  
       </ul>
     </div>
