ajuste de i,magem

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Sabores da Terra & Conexões Urbanas</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link href="<img src="img/yt.png" alt="logo youtube" width="50" height="50">
+  <link href="<img src="img/reni.jpeg" alt="logo reni" width="50" height="50">
 </head>
 <body>
   <header class="cabecalho-principal">
