--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </header>
   <header class="cabecalho-principal">
     <div class="container">
-      <img src="img/reni.jpeg" alt="logo reni" width="50" height="50" style="float: lef; margin-left: 400px ;">
+      <img src="img/reni.jpeg" alt="logo reni" width="50" height="50" style="float: lef; margin-right: 400px ;">
       <h1 class="logo">Sabores da Terra</h1>
       <button class="botao-menu" aria-label="Abrir menu">☰</button>
       <nav class="navegacao-principal">
