--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </header>
   <header class="cabecalho-principal">
     <div class="container">
+      <img src="img/reni.jpeg" alt="Logo da Reni" width="50" height="50" style="float: left; margin-right: 10px;">
       <h1 class="logo">Sabores da Terra</h1>
       <button class="botao-menu" aria-label="Abrir menu">☰</button>
       <nav class="navegacao-principal">
